cc9/runtime/include/pthread.h

#ifndef _PTHREAD_H
#define _PTHREAD_H
#include <sched.h>
#include <time.h>
/* cc9 pthreads over Plan 9 rfork(RFMEM) + semaphores. pthread_t is the Plan 9
 * pid of the thread (rfork return / read from /dev/pid). */
typedef unsigned long pthread_t;
typedef struct { int sem; unsigned long owner; int count; int kind; } pthread_mutex_t;
/* FIFO waiter queue: each waiter blocks on its OWN semaphore (a node on its
 * stack), so a signal targets a specific already-queued waiter and a newly
 * arriving waiter (appended at the tail) cannot steal it. lk = internal
 * mutex-semaphore (1=free). */
typedef struct { int lk; int pad; void *head; void *tail; } pthread_cond_t;
typedef int pthread_once_t;
typedef int pthread_key_t;
typedef struct { int kind; } pthread_mutexattr_t;
typedef struct { int unused; } pthread_condattr_t;
typedef struct { int detachstate; } pthread_attr_t;
typedef pthread_mutex_t pthread_rwlock_t;   /* a plain mutex (readers serialize) */
#define PTHREAD_RWLOCK_INITIALIZER {1,0,0,0}
#define PTHREAD_MUTEX_INITIALIZER {1,0,0,0}
#define PTHREAD_COND_INITIALIZER {1,0,0,0}
#define PTHREAD_ONCE_INIT 0
#define PTHREAD_MUTEX_NORMAL 0
#define PTHREAD_MUTEX_RECURSIVE 1
#define PTHREAD_MUTEX_ERRORCHECK 2
#define PTHREAD_MUTEX_DEFAULT 0
/* JOINABLE must be 0: a zeroed/uninitialized attr then means "joinable",
 * matching both POSIX's default and what pthread_create does with no attr. */
#define PTHREAD_CREATE_JOINABLE 0
#define PTHREAD_CREATE_DETACHED 1
#ifdef __cplusplus
extern "C" {
#endif
int pthread_create(pthread_t *, const pthread_attr_t *, void *(*)(void *), void *);
int pthread_join(pthread_t, void **);
int pthread_detach(pthread_t);
int pthread_kill(pthread_t, int);   /* sig 0 = exists?, 9 = kill; else EINVAL */
int pthread_attr_setdetachstate(pthread_attr_t *, int);
int pthread_attr_getdetachstate(const pthread_attr_t *, int *);
pthread_t pthread_self(void);
int pthread_equal(pthread_t, pthread_t);
void pthread_exit(void *);
int pthread_mutex_init(pthread_mutex_t *, const pthread_mutexattr_t *);
int pthread_mutex_destroy(pthread_mutex_t *);
int pthread_mutex_lock(pthread_mutex_t *);
int pthread_mutex_trylock(pthread_mutex_t *);
int pthread_mutex_unlock(pthread_mutex_t *);
int pthread_mutexattr_init(pthread_mutexattr_t *);
int pthread_mutexattr_destroy(pthread_mutexattr_t *);
int pthread_mutexattr_settype(pthread_mutexattr_t *, int);
int pthread_cond_init(pthread_cond_t *, const pthread_condattr_t *);
int pthread_cond_destroy(pthread_cond_t *);
int pthread_cond_wait(pthread_cond_t *, pthread_mutex_t *);
int pthread_cond_timedwait(pthread_cond_t *, pthread_mutex_t *, const struct timespec *);
int pthread_cond_signal(pthread_cond_t *);
int pthread_cond_broadcast(pthread_cond_t *);
int pthread_once(pthread_once_t *, void (*)(void));
int pthread_key_create(pthread_key_t *, void (*)(void *));
int pthread_key_delete(pthread_key_t);
void *pthread_getspecific(pthread_key_t);
int pthread_setspecific(pthread_key_t, const void *);
int pthread_rwlock_init(pthread_rwlock_t *, const void *);
int pthread_rwlock_destroy(pthread_rwlock_t *);
int pthread_rwlock_rdlock(pthread_rwlock_t *);
int pthread_rwlock_wrlock(pthread_rwlock_t *);
int pthread_rwlock_unlock(pthread_rwlock_t *);
int sched_yield(void);
int nanosleep(const struct timespec *, struct timespec *);
#ifdef __cplusplus
}
#endif
#endif
#ifdef __cplusplus
extern "C" {
#endif
int pthread_atfork(void (*)(void), void (*)(void), void (*)(void));
int pthread_attr_init(pthread_attr_t *);
int pthread_attr_destroy(pthread_attr_t *);
int pthread_attr_setstacksize(pthread_attr_t *, size_t);
int pthread_attr_getstacksize(const pthread_attr_t *, size_t *);
int pthread_condattr_init(pthread_condattr_t *);
int pthread_condattr_destroy(pthread_condattr_t *);
int pthread_condattr_setclock(pthread_condattr_t *, int);
int pthread_rwlock_tryrdlock(pthread_rwlock_t *);
int pthread_rwlock_trywrlock(pthread_rwlock_t *);
int pthread_setname_np(pthread_t, const char *);
int pthread_getname_np(pthread_t, char *, size_t);
int pthread_sigmask(int, const unsigned long *, unsigned long *);
int pthread_getschedparam(pthread_t, int *, struct sched_param *);
int pthread_setschedparam(pthread_t, int, const struct sched_param *);
#ifdef __cplusplus
}
#endif